# approx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  html.h  input.h  main.cpp  plot.h  result.h  test.h  test_atan2f.h  test_expf.h  test_invsqrtf.h  test_log10f.h  test_sqrtf.h  test_sqrti.h
